:sparkles: Added register button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                         <label for="senha">Senha</label>
                         <input type="password" name="senha" placeholder="Senha">
                     </div>
-                    <button class="btn-login">Login</button>
+                    <button class="btn-login">Logar</button>
+                    <div class="btn-plus">
+                        <a class="btn-cadastre-se">Não tem uma conta? <span class="span-cadastre-se">Cadastre-se</span></a>
+                    </div>
                 </div>
             </div>
         </div>
